--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 		<h1>The Amazing Mouse Game!</h1>
 		<h2 id="status">Begin by moving your mouse over the "S".</h2>
 		<div id="game">
-			<div id="start">S</div>
+			<div id="start" >S</div>
 			<div class="boundary" id="boundary1"></div>
 			<div class="boundary"></div>
 			<div class="boundary"></div>
@@ -21,7 +21,7 @@
 		<p>
 			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
 		</p>
-		<div class="boundary example"></div>
+		<div class="example"></div>
 		<p>
 			Good luck
 		</p>
