--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
 			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
 		</p>
 		<div class="example"></div>
-		<p>
+		<p id="score">
 			Good luck
 		</p>
 	</body>
