--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <title>sign up</title>
   
-  <script type="text/javascript" src="local.js"></script>
+  <script type="text/javascript" src="game.js"></script>
 </head>
 <center>
 <body >
