--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,7 @@
 <head>
   
   <title>sign in</title>
-  <script type="text/javascript" src="local.js"></script>
+  <script type="text/javascript" src="game.js"></script>
 </head>
 <center>
 <body>
